Replace internal PluginManagerCore API and bump version to 1.0.5
PluginManagerCore.getPlugin(PluginId) is marked @ApiStatus.Internal.
Replace it with a classloader-based approach: load META-INF/plugin.xml
(a resource inside the plugin JAR) to extract the JAR's filesystem path,
then navigate up two levels (lib/plugin.jar → lib → plugin root) to
resolve the textmate/ROS bundle directory. This avoids all JetBrains
internal APIs and works reliably with IntelliJ's PluginClassLoader.